--- a/crime_stoppers/config/database.yml
+++ b/crime_stoppers/config/database.yml
@@ -13,13 +13,23 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+   adapter: mysql2
+   encoding: utf8
+   database: crime_stoppers_dev
+   pool: 5
+   username: crime_stoppers
+   password: vn8PaImYqeIivmzyspx93bfA4UTWCgD9P7Ar7p2S
+   host: 127.0.0.1
+   socket: /var/run/mysqld/mysqld.sock
+
+
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+   adapter: mysql2
+   encoding: utf8
+   database: crime_stoppers_dev
+   pool: 5
+   username: crime_stoppers
+   password: vn8PaImYqeIivmzyspx93bfA4UTWCgD9P7Ar7p2S
+   host: 127.0.0.1
+   socket: /var/run/mysqld/mysqld.sock
