--- a/crime_stoppers/Gemfile
+++ b/crime_stoppers/Gemfile
@@ -9,7 +9,7 @@ gem 'mysql2'
 
 # Use SCSS for stylesheets
 gem 'bootstrap-sass', '~> 3.2.0'
-gem 'sass-rails', '>= 3.2’
+gem 'sass-rails', '>= 3.2'
 gem 'multi_json', '1.7.8'
 
 # Use Uglifier as compressor for JavaScript assets
