--- a/crime_stoppers/Gemfile
+++ b/crime_stoppers/Gemfile
@@ -11,7 +11,7 @@ gem 'mysql2'
 gem 'bootstrap-sass', '~> 3.2.0'
 gem 'sass-rails', '>= 3.2'
 gem 'multi_json', '1.7.8'
-
+gem 'activeresource'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 
