--- a/crime_stoppers/Gemfile
+++ b/crime_stoppers/Gemfile
@@ -7,6 +7,9 @@ gem 'debugger'
 gem 'sqlite3'
 gem 'mysql2'
 
+#Pie chart
+gem "chartkick"
+
 # Use SCSS for stylesheets
 gem 'bootstrap-sass', '~> 3.2.0'
 gem 'sass-rails', '>= 3.2'
