--- a/crime_stoppers/Gemfile
+++ b/crime_stoppers/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.2'
-gem 'debugger'
+gem 'byebug', '~> 3.5.1'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
 gem 'mysql2'
@@ -13,7 +13,7 @@ gem "chartkick"
 # Use SCSS for stylesheets
 gem 'bootstrap-sass', '~> 3.2.0'
 gem 'sass-rails', '>= 3.2'
-gem 'multi_json', '1.7.8'
+gem 'multi_json'
 gem 'activeresource'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
